--- a/assets/css/commons/base.css
+++ b/assets/css/commons/base.css
@@ -25,7 +25,7 @@
 html {
   font-size: 62.5%;
   line-height: 1.6rem;
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
 
   /* Chrome 9-, Safari 5-, iOS 4.2-, Android 3-, Blackberry 7- */
   -webkit-box-sizing: border-box;
@@ -48,4 +48,21 @@ ul {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+/* Seletion loading
+ * Usage: add a div with class="skeleton" and set style="width: 100px; height: 40px"
+ */
+.skeleton {
+  border-radius: 8px;
+  animation: skeleton-loading 1s linear infinite alternate;
+  cursor: default;
+}
+@keyframes skeleton-loading {
+  0% {
+    background-color: hsl(200, 20%, 80%);
+  }
+  100% {
+    background-color: hsl(200, 20%, 95%);
+  }
 }
