--- a/assets/css/commons/base.css
+++ b/assets/css/commons/base.css
@@ -6,7 +6,7 @@
   --white-color: #fff;
   --black-color: #fff;
   --background-color: #1a1a1a;
-  --text-dark-color: #1a1a1a;
+  --text-dark-color: #272727;
   --text-white-color: #fff;
 
   --border-radius-pill: 500px;
@@ -55,7 +55,7 @@ a {
  */
 .skeleton {
   border-radius: 8px;
-  animation: skeleton-loading 1s linear infinite alternate;
+  animation: skeleton-loading 0.6s linear infinite alternate;
   cursor: default;
 }
 @keyframes skeleton-loading {
@@ -104,4 +104,30 @@ a {
   height: 4px;
   width: 4px;
   background-color: var(--text-white-color);
+}
+
+/* Button */
+.btn {
+  font-size: 1.4rem;
+  line-height: 1;
+  font-weight: 600;
+  border: none;
+  outline: none;
+  padding: 16px 24px;
+  border-radius: var(--border-radius-pill);
+  background-color: var(--white-color);
+  color: var(--text-dark-color);
+  cursor: pointer;
+  transition: all 0.1s linear;
+}
+
+.btn-primary {
+  background-color: var(--primay-color);
+  color: var(--text-white-color);
+}
+
+.btn-primary:hover {
+  background-color: transparent;
+  color: var(--primay-color);
+  outline: 3px solid var(--primay-color);
 }
