--- a/assets/css/commons/grid.css
+++ b/assets/css/commons/grid.css
@@ -1,11 +1,17 @@
+.container-1600 {
+  padding: 0 12px;
+  max-width: 1624px;
+  margin: 0 auto;
+}
+
 .grid {
   width: 100%;
   display: block;
-  padding: 0;
+  padding: 0 12px;
 }
 
 .grid.wide {
-  max-width: 2000px;
+  max-width: 1624px;
   margin: 0 auto;
 }
 
