--- a/assets/css/commons/header.css
+++ b/assets/css/commons/header.css
@@ -16,7 +16,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 32px;
 }
 
 .header__burger-btn {
@@ -301,7 +300,7 @@
   transition: all 0.15s linear;
 }
 
-.header__side-nav-item:not(:last-child) {
+.header__side-nav-item:not(:last-of-type) {
   margin-right: 32px;
 }
 
