--- a/assets/css/product-detail/shopify-template.css
+++ b/assets/css/product-detail/shopify-template.css
@@ -7,6 +7,10 @@
 }
 
 
+[role=main] .shopify-section:first-child {
+  --section-is-first: 1;
+}
+
 #shopify-section-template--16714356457717__19e8ae6c-fa47-41f7-b6fe-6d0a1f20d05a {
   --feature-chart-values-columns-count: 1;
 }
