--- a/assets/css/product-detail/basic.css
+++ b/assets/css/product-detail/basic.css
@@ -5,12 +5,10 @@
     box-sizing: border-box;
     border-style: solid;
     border-width: 0;
-    border-color: rgb(var(--text-color) / .12)
+    border-color: rgb((39 39 39) / .12)
 }
 
 html {
-    /* font-size: 62.5%; */
-    /* line-height: 1.6rem; */
     font-family: 'Inter', sans-serif;
 
     /* Chrome 9-, Safari 5-, iOS 4.2-, Android 3-, Blackberry 7- */
@@ -23,17 +21,15 @@ html {
     -webkit-text-size-adjust: 100%;
     -moz-tab-size: 4;
     tab-size: 4;
-    scroll-padding-block-start: calc(var(--sticky-area-height) + 20px);
+    scroll-padding-block-start: 20px;
     line-height: 1.5
 }
 
 body {
-    --background: var(--background-primary);
-    --text-color: var(--text-primary);
-    background: rgb(var(--background));
-    color: rgb(var(--text-color));
-    font: var(--text-font-style) var(--text-font-weight) var(--text-base) / 1.6 var(--text-font-family);
-    letter-spacing: var(--text-letter-spacing);
+    background: rgb(255 255 255);
+    color: rgb(39 39 39);
+    font: normal 400 1.0rem / 1.6 -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Ubuntu, Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    letter-spacing: 0.0em;
     margin: 0;
     position: relative
 }
@@ -112,14 +108,14 @@ textarea {
     width: 100%;
     -webkit-appearance: none;
     appearance: none;
-    height: var(--input-height);
+    height: 2.625rem;
     border-radius: var(--rounded-input);
-    background: rgb(var(--input-background, transparent));
-    color: rgb(var(--input-text-color, var(--text-color)));
+    background: rgb(transparent);
+    color: rgb(var(--input-text-color, 39 39 39));
     text-align: start;
     border-width: 1px;
-    padding-inline-start: var(--input-padding-inline);
-    padding-inline-end: var(--input-padding-inline)
+    padding-inline-start: 1.25rem;
+    padding-inline-end: 1.25rem;
 }
 
 .input:focus,
@@ -132,27 +128,25 @@ textarea {
 
 .input.is-floating,
 .select.is-floating {
-    height: calc(var(--input-height) + .625rem);
-    padding-block-start: var(--spacing-4)
+    height: calc(2.625rem + .625rem);
+    padding-block-start: 1rem;
 }
 
 .button,
 .btn {
-    --button-background: var(--button-background-primary) / var(--button-background-opacity, 1);
-    --button-text-color: var(--button-text-primary);
-    --button-outline-color: var(--button-background-primary);
+    --button-outline-color: 60 97 158;
     -webkit-appearance: none;
     appearance: none;
-    border-radius: var(--rounded-button);
-    background-color: rgb(var(--button-background));
-    color: rgb(var(--button-text-color));
+    border-radius: 3.75rem;
+    background-color: rgb(60 97 158);
+    color: rgb(255 255 255);
     text-align: center;
-    font-size: var(--text-sm);
-    letter-spacing: var(--text-letter-spacing);
-    padding-block-start: var(--spacing-2-5);
-    padding-block-end: var(--spacing-2-5);
-    padding-inline-start: var(--spacing-5);
-    padding-inline-end: var(--spacing-5);
+    font-size: 0.75rem;
+    letter-spacing: 0.0em;
+    padding-block-start: 0.625rem;
+    padding-block-end: 0.625rem;
+    padding-inline-start: 1.25rem;
+    padding-inline-end: 1.25rem;
     font-weight: 700;
     line-height: 1.6;
     transition: background-color .15s ease-in-out, color .15s ease-in-out, box-shadow .15s ease-in-out;
@@ -181,13 +175,13 @@ textarea {
 
 /* Sub-header */
 .sub-header {
-    background-color: var(--background-color);
+    background-color: #1a1a1a;
     display: flex;
     overflow-x: hidden;
     --translate-x: -60px;
-    transform: translateX(var(--translate-x));
-    width: calc(100% - var(--translate-x));
-    height: var(--sub-header-height);
+    transform: translateX(-60px);
+    width: calc(100% - -60px);
+    height: 48px;
     display: flex;
     align-items: center;
 }
@@ -201,7 +195,7 @@ textarea {
     font-size: 1.2rem;
     line-height: 1.2rem;
     font-weight: 600;
-    color: var(--text-white-color);
+    color: #fff;
     padding: 0 84px;
     position: relative;
 }
@@ -215,7 +209,7 @@ textarea {
     transform: translateY(-50%);
     height: 4px;
     width: 4px;
-    background-color: var(--text-white-color);
+    background-color: #fff;
 }
 
 /* Button */
@@ -226,20 +220,20 @@ textarea {
     border: none;
     outline: none;
     padding: 16px 24px;
-    border-radius: var(--border-radius-pill);
-    background-color: var(--white-color);
-    color: var(--text-dark-color);
+    border-radius: 500px;
+    background-color: #fff;
+    color: #272727;
     cursor: pointer;
     transition: all 0.1s linear;
 }
 
 .btn-primary {
-    background-color: var(--primay-color);
-    color: var(--text-white-color);
+    background-color: #1d2864;
+    color: #fff;
 }
 
 .btn-primary:hover {
     background-color: transparent;
-    color: var(--primay-color);
-    outline: 3px solid var(--primay-color);
+    color: #1d2864;
+    outline: 3px solid #1d2864;
 }
