--- a/assets/css/product-detail/basic.css
+++ b/assets/css/product-detail/basic.css
@@ -103,13 +103,12 @@ textarea {
 }
 
 .input,
-.textarea,
 .select {
     width: 100%;
     -webkit-appearance: none;
     appearance: none;
     height: 2.625rem;
-    border-radius: var(--rounded-input);
+    border-radius: 0.5rem;
     background: rgb(transparent);
     color: rgb(var(--input-text-color, 39 39 39));
     text-align: start;
